SERVER-18219 hint to GCC that WCE loops will actually return